--- a/index.html
+++ b/index.html
@@ -15,31 +15,39 @@
         ul,li,ol {list-style:none; margin:0; padding:0;}
         a {text-decoration:none;}
 
-    .mySlides {display:none}
-    .lmy_container {width:100%; height:70px; display:flex; justify-content:center; align-items:center; }
+    /* .mySlides {} */
+    .lmy_container {width:100%; height:80px; display:flex; justify-content:center; align-items:center; }
     .lmy_container h1 {font-family:'Barlow', sans-serif; font-weight: 600 !important; margin-top:15px;
-              letter-spacing:3px; color:#000; font-size:23px; text-transform: uppercase;}
+              letter-spacing:3px; color:#000; font-size:28px; text-transform: uppercase;}
 
-    #img_top_box {width:100%; height:700px; display:flex; justify-content:center;}
-    .img_big_box {width:87%; height:690px; display:flex; flex-direction:column;  margin-top:15px; 
-        z-index:1;border:1px solid #eee; background-color:skyblue; }
-    .text_box {width:100%; height:100px; background-color:pink;}   
-    .text_box h1 {font-family:'Barlow', sans-serif; font-weight: 600 !important; color:#000; font-size:20px; text-align:center; margin-top:15px; } 
-    .img_content {width:100%; height:590px; z-index:1; display:flex; justify-content:center; align-items: center; background-color:red;}
-    .img_content img {width:500px; height:300px;}
+    #img_top_box {width:100%; height:690px; }
+    .img_big_box {width:87%; height:680px;  margin:15px auto; 
+        z-index:1;border:1px solid #eee;  }
+    .text_box {width:100%; height:150px;  display: flex; flex-direction: column; align-items:center;}   
 
-    .pn_center {width:100%; height:100px; display:flex; justify-content:center; align-items: center; position:absolute; margin-top:-400px}
+    .img_big_box:first-of-type h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#f5b188; font-size:27px; text-align:center; margin-top:40px;} 
+    .img_big_box:nth-of-type(2) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#b45f3d; font-size:27px; text-align:center; margin-top:40px;} 
+    .img_big_box:nth-of-type(3) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#e22e2f; font-size:27px; text-align:center; margin-top:40px;} 
+    .img_big_box:nth-of-type(4) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#b9c0c6; font-size:27px; text-align:center; margin-top:40px;} 
+    .img_big_box:nth-of-type(5) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#fc7045; font-size:27px; text-align:center; margin-top:40px;} 
+    .img_big_box:nth-of-type(6) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#f7c43d; font-size:27px; text-align:center; margin-top:40px;} 
+    
+    .text_box h2 {font-family:'S-CoreDream-3Light';  color:#373737; font-size:18px; text-align:center; margin-top:13px; } 
+    .text_box p {font-family:'S-CoreDream-3Light'; color:#aeadad; font-size:13px; text-align:center; margin-top:3px; letter-spacing: 1px; } 
+    .img_content {width:100%; height:480px; z-index:1; display:flex; justify-content:center; align-items: center; }
+    .img_content img:first-of-type {width:1590px; height:440px;}
+
+    .pn_center {width:100%; height:100px; display:flex; justify-content:center; align-items: center; position:absolute; margin-top:-380px}
     .p_button {width:67px; height:65px; background-color:#fff; border:1px solid #d4d4d4; position:absolute; left:2%;
         display:flex; justify-content:center; align-items: center;  margin-top:-30px;}
     .n_button {width:67px; height:65px; background-color:#fff; border:1px solid #d4d4d4; position:absolute; right:2%; 
         display:flex; justify-content:center; align-items: center;  margin-top:-30px;}
-    .p_button:hover {cursor:pointer; color:#000; transition: 0.7s;}
-    .n_button:hover {cursor:pointer; color:#000; transition: 0.7s;}
+    .p_button:hover, .n_button:hover {cursor:pointer; color:#000; transition: 0.7s;}
     .p_button,.n_button {font-family: 'S-CoreDream-5Medium'; letter-spacing: 2px; font-size: 11px; color:#999; text-transform: uppercase;}
 
-    .number_box {width:100%; height:70px; display:flex; justify-content:center; align-items: center; }
+    .number_box {width:100%; height:45px; display:flex; justify-content:center; align-items:center; margin-bottom:10px; }
     .number_button {font-family: 'S-CoreDream-4Regular'; letter-spacing: 1px; font-size:15px; color:#999; margin:13px;}
-    .number_button:hover {cursor:pointer; color:#000; transition: 0.7s;}
+    .number_button:hover, .active {cursor:pointer; color:#000; transition: 0.7s;}
 
     .footer {width:100%; height:97px; display:flex; justify-content:center; align-items:center;}
     .footer_box {width:100%; height:97px; background-color:#a3a2a2;}
@@ -63,19 +71,11 @@
         <div class="img_big_box"> 
             <div class="text_box">
                 <h1>Event Page</h1>
+                <h2>2021 새해 이벤트 페이지 제작</h2>
+                <p>미니이벤트페이지 ver3 / 소프라이즈 / 모바일 / main / 팝업</p>
             </div>
             <div class="img_content">
-                <img class="mySlides" src="" style="background-color:white;">
-            </div>
-        </div>
-
-
-        <!-- <div class="img_big_box"> 
-            <div class="text_box">
-                <h1>Event Page</h1>
-            </div>
-            <div class="img_content">
-                <img class="mySlides" src="" style="background-color:white;">
+                <img class="mySlides" src="img/j_img3.jpg" style="background-color:white;">
             </div>
         </div>
 
@@ -83,9 +83,11 @@
         <div class="img_big_box"> 
             <div class="text_box">
                 <h1>Event Page</h1>
+                <h2>발렌타인데이 이벤트 페이지 제작</h2>
+                <p>미니이벤트페이지 ver2 / 발렌타인데이 / 모바일 / main / 팝업</p>
             </div>
             <div class="img_content">
-                <img class="mySlides" src="" style="background-color:white;">
+                <img class="mySlides" src="img/j_img2.jpg" style="background-color:white;">
             </div>
         </div>
 
@@ -93,9 +95,11 @@
         <div class="img_big_box"> 
             <div class="text_box">
                 <h1>Event Page</h1>
+                <h2>연말 이벤트 페이지 제작</h2>
+                <p>미니이벤트페이지 ver2 / 스와로브스키 x 제나셀 / 모바일 / main / 팝업</p>
             </div>
             <div class="img_content">
-                <img class="mySlides" src="" style="background-color:white;">
+                <img class="mySlides" src="img/j_img4.jpg" style="background-color:white;">
             </div>
         </div>
 
@@ -103,9 +107,11 @@
         <div class="img_big_box"> 
             <div class="text_box">
                 <h1>Event Page</h1>
+                <h2>신축년 설맞이 이벤트 페이지 제작</h2>
+                <p>본이벤트페이지 ver4 / 모바일 / main / 팝업</p>
             </div>
             <div class="img_content">
-                <img class="mySlides" src="" style="background-color:white;">
+                <img class="mySlides" src="img/j_img5.jpg" style="background-color:white;">
             </div>
         </div>
 
@@ -113,9 +119,11 @@
         <div class="img_big_box"> 
             <div class="text_box">
                 <h1>Event Page</h1>
+                <h2>20201 새해 이벤트 페이지 제작</h2>
+                <p>미니이벤트페이지 ver2 / 슈퍼셀하세요 / 모바일 / main / 팝업</p>
             </div>
             <div class="img_content">
-                <img class="mySlides" src="" style="background-color:white;">
+                <img class="mySlides" src="img/j_img6.jpg" style="background-color:white;">
             </div>
         </div>
 
@@ -123,11 +131,13 @@
         <div class="img_big_box"> 
             <div class="text_box">
                 <h1>Event Page</h1>
+                <h2>2020 제6회 대한민국 기업대상</h2>
+                <p>머니투데이 수상 내역 배너 / main / 모바일</p>
             </div>
             <div class="img_content">
-                <img class="mySlides" src="" style="background-color:white;">
+                <img class="mySlides" src="img/j_img1.jpg" style="background-color:white;">
             </div>
-        </div> -->
+        </div>
 
     </div>
 
@@ -145,8 +155,6 @@
         <div class="number_button" onclick="currentDiv(4)">4</div> 
         <div class="number_button" onclick="currentDiv(5)">5</div> 
         <div class="number_button" onclick="currentDiv(6)">6</div> 
-        <div class="number_button" onclick="currentDiv(7)">7</div> 
-        <div class="number_button" onclick="currentDiv(8)">8</div> 
     </div>
 
     <div class="footer">
@@ -171,18 +179,18 @@
 
     function showDivs(n) {
     var i;
-    var x = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("demo");
+    var x = document.getElementsByClassName("img_big_box");
+    var dots = document.getElementsByClassName("number_button");
     if (n > x.length) {slideIndex = 1}    
     if (n < 1) {slideIndex = x.length}
     for (i = 0; i < x.length; i++) {
         x[i].style.display = "none";  
     }
     for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" w3-red", "");
+        dots[i].className = dots[i].className.replace(" active", "");
     }
     x[slideIndex-1].style.display = "block";  
-    dots[slideIndex-1].className += " w3-red";
+    dots[slideIndex-1].className += " active";
     }
 </script>
 
