--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .img_big_box:nth-of-type(5) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#fc7045; font-size:27px; text-align:center; margin-top:40px;} 
     .img_big_box:nth-of-type(6) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#f7c43d; font-size:27px; text-align:center; margin-top:40px;} 
     
-    .text_box h2 {font-family:'S-CoreDream-3Light';  color:#373737; font-size:18px; text-align:center; margin-top:13px; } 
+    .text_box h2 {font-family:'S-CoreDream-3Light';  color:#525252; font-size:18px; text-align:center; margin-top:13px; } 
     .text_box p {font-family:'S-CoreDream-3Light'; color:#aeadad; font-size:13px; text-align:center; margin-top:3px; letter-spacing: 1px; } 
     .img_content {width:100%; height:480px; z-index:1; display:flex; justify-content:center; align-items: center; }
     .img_content img:first-of-type {width:1590px; height:440px;}
@@ -46,7 +46,7 @@
     .p_button,.n_button {font-family: 'S-CoreDream-5Medium'; letter-spacing: 2px; font-size: 11px; color:#999; text-transform: uppercase;}
 
     .number_box {width:100%; height:45px; display:flex; justify-content:center; align-items:center; margin-bottom:10px; }
-    .number_button {font-family: 'S-CoreDream-4Regular'; letter-spacing: 1px; font-size:15px; color:#999; margin:13px;}
+    .number_button {font-family: 'S-CoreDream-5Medium'; letter-spacing: 1px; font-size:15px; color:#999; margin:13px;}
     .number_button:hover, .active {cursor:pointer; color:#000; transition: 0.7s;}
 
     .footer {width:100%; height:97px; display:flex; justify-content:center; align-items:center;}
