--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"> 
     <title>이미영 웹디자인 포트폴리오</title>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
+    <script src="js/script.js"></script>
 
 <style>
 
@@ -15,10 +17,24 @@
         ul,li,ol {list-style:none; margin:0; padding:0;}
         a {text-decoration:none;}
 
-    /* .mySlides {} */
-    .lmy_container {width:100%; height:80px; display:flex; justify-content:center; align-items:center; }
-    .lmy_container h1 {font-family:'Barlow', sans-serif; font-weight: 600 !important; margin-top:15px;
-              letter-spacing:3px; color:#000; font-size:28px; text-transform: uppercase;}
+
+    .typing-txt {width:100%; height:80px; display:flex; justify-content:center; align-items:center; }
+    .typing-txt h1 {font-family:'Barlow', sans-serif; font-weight: 600 !important; margin-top:15px;
+              letter-spacing:3px; color:#000; font-size:28px; text-transform: uppercase; position: absolute;
+              display: inline-block; animation-name:cursor; animation-duration: 0.3s; animation-iteration-count: infinite; border-right: 1px solid #ccc;}
+    .typing-txt h1:first-of-type {display: none;}      
+    
+    @keyframes cursor {
+    0% {
+        border-right: 1px solid #fff;
+    }
+    50% {
+        border-right: 1px solid #000;
+    }
+    100% {
+        border-right: 1px solid #fff;
+    }
+    }
 
     #img_top_box {width:100%; height:690px; }
     .img_big_box {width:87%; height:680px;  margin:15px auto; 
@@ -26,7 +42,7 @@
     .text_box {width:100%; height:150px;  display: flex; flex-direction: column; align-items:center;}   
 
     .img_big_box:first-of-type h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#f5b188; font-size:27px; text-align:center; margin-top:40px;} 
-    .img_big_box:nth-of-type(2) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#b45f3d; font-size:27px; text-align:center; margin-top:40px;} 
+    .img_big_box:nth-of-type(2) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#ca673f; font-size:27px; text-align:center; margin-top:40px;} 
     .img_big_box:nth-of-type(3) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#e22e2f; font-size:27px; text-align:center; margin-top:40px;} 
     .img_big_box:nth-of-type(4) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#b9c0c6; font-size:27px; text-align:center; margin-top:40px;} 
     .img_big_box:nth-of-type(5) h1 {font-family:'Barlow', sans-serif; font-weight: 500; color:#fc7045; font-size:27px; text-align:center; margin-top:40px;} 
@@ -42,7 +58,7 @@
         display:flex; justify-content:center; align-items: center;  margin-top:-30px;}
     .n_button {width:67px; height:65px; background-color:#fff; border:1px solid #d4d4d4; position:absolute; right:2%; 
         display:flex; justify-content:center; align-items: center;  margin-top:-30px;}
-    .p_button:hover, .n_button:hover {cursor:pointer; color:#000; transition: 0.7s;}
+    .p_button:hover, .n_button:hover {cursor:pointer; color:#fff; transition: 0.7s; background-color:#a3a2a2;}
     .p_button,.n_button {font-family: 'S-CoreDream-5Medium'; letter-spacing: 2px; font-size: 11px; color:#999; text-transform: uppercase;}
 
     .number_box {width:100%; height:45px; display:flex; justify-content:center; align-items:center; margin-bottom:10px; }
@@ -62,8 +78,9 @@
 
 <body>
 
-   <div class="lmy_container">
+   <div class="typing-txt">
       <h1>MiYoung Web Design Portfolio</h1>
+      <h1 class="typing"></h1>
    </div>
     
    <div id="img_top_box">
